# nilearn

./: .codespell_dict  .coverage.remi-gau-ROG-Zephyrus-G16.510792.XHUqIHhx.wgw0  .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .prettierignore  .sourcery.yaml  .travis.yml  AGENTS.md  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  COPYING  LICENSE  MANIFEST.in  Makefile  OLD_cercle_OLD.yml  README-py3k.rst  README.md  README.rst  README.txt  Untitled.ipynb  appveyor.yml  atlas_lut.py  azure-pipelines.yml  benchmark_hierarchical_clustering_from_scikits_learn.py  brainvolume.py  build.txt  change.txt  circle.yml  codecov.yml  conf.py  conftest.py  contributing.rst  coverage.xml  datasets.py  (+107 more)
.binder/: postBuild  requirements.txt  runtime.txt
.circleci/: README.md  artifact_path  auto-cache-timestamp  build_changed_examples.py  cache-timestamp.txt  clean-cache.py  clean-cache.sh  config.yml  config.yml-presprint  docs-cache-timestamp  manual-cache-timestamp  manual-cache-timestamp.txt  package-cache-timestamp  packages-cache-timestamp
.claude/: settings.json
.github/: codespell_ignore_words.txt  dependabot.yml  nightly_failure.md  pull_request_template.md  workflow_failure.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  custom.md  documentation.md  documentation.yml  feature_request.md  feature_request.yml  question-on-neurostars.md
.github/workflows/: README.md  assign.yml  auto-comment.yml  benchmark.yml  benchmark_2.yml  benchmark_against_main.yml  black.yml  build-docs.yml  check_code_complexity.yml  check_deprecations.yml  check_gha_workflow.yml  check_skip_flags.yml  check_style_guide.yml  circle_artifacts.yml  codespell.yml  (+31 more)
.jupyter/: jupyter_notebook_config.py
asv_benchmarks/: .gitignore  Makefile  asv.conf.json  hashestobenchmark.txt
binder/: requirements.txt
build_tools/: flake8_diff.sh
continuous_integration/: after_success.sh  circle_ci_test.sh  circle_ci_test_doc.sh  circleci_install.sh  flake8_diff.sh  install.sh  show-python-packages-versions.py  test_script.sh
debian/: changelog  control  copyright  gbp.conf  rules
doc/: AUTHORS.rst  COPYING  Makefile  README  _additional_doctests.rst  _additional_doctests.txt  authors.rst  bibliography.rst  ci.jinja  conf.py  conf.py.bak  conftest.py  contributing.rst  dataset_manipulation.rst  development.rst  extracting_data.rst  fill_doc_check.sh  functional_connectivity.rst  get_ci_workflows_description.py  get_data_examples.py  getting_started.rst  glossary.rst  group_sparse_covariance.rst  haxby_decoding.rst  haxby_searchlight.rst  ica_resting_state.rst  image_manipulation.rst  index.rst  install_doc_component.html  introduction.rst  issues.txt  jupyter-lite.json  jupyter_lite_config.json  maintenance.rst  make.bat  make_atlas_table.py  nifti_masker.rst  nifti_masker_advanced.rst  nistats_migration.rst  quickstart.md  (+14 more)
env_nilearn/: pyvenv.cfg
examples/: .gitignore  README.txt  auditory_block_paradigm.csv  html_repr_note.rst  masker_note.rst  newapi_fiac_analysis.py  newapi_localizer_analysis.py  plot_3d_and_4d_niimg.py  plot_a_oasis_vbm_space_net.py  plot_atlas.py  plot_bids_analysis.py  plot_bids_features.py  plot_decoding_tutorial.py  plot_demo_plotting.py  plot_design_matrix.py  plot_fiac_analysis.py  plot_first_level_model_details.py  plot_haxby_different_estimators.py  plot_haxby_full_analysis.py  plot_haxby_simple.py  plot_haxby_space_net.py  plot_haxby_stimuli.py  plot_haxby_visualisation.py  plot_hrf.py  plot_localizer_analysis.py  plot_localizer_simple_analysis.py  plot_mixed_gambles.py  plot_nifti_simple.py  plot_nilearn_101.py  plot_oasis_vbm.py  plot_oasis_vbm_space_net.py  plot_poldrack_space_net.py  plot_python_101.py  plot_second_level_button_press.py  plot_second_level_design_matrix.py  plot_single_subject_single_run.py  plot_spm_auditory.py  plot_spm_multimodal_faces.py  plot_thresholding.py  plot_tv_msdl.py  (+3 more)
maint_tools/: authors.tsv  check_atlas.py  check_defaults.py  check_docstrings.py  check_gha_workflow.py  check_gha_workflow.py.bak  check_glossary_term.py  check_private.py  check_private.py.bak  citation_cff_maint.py  compare_doc_images.js  compare_doc_images_ignore.txt  convert_brain_templates.py  convert_templates.py  generate_json.sh  get_affiliation_authors.py  missing_default_in_docstring.py  missing_obj_in_docstring.py  plot_align_glass_brain_svg.py  plot_align_svg.py  plot_package_size.sh  plot_test_timing.py  requirements.txt  show-python-packages-versions.py  svg_to_json_converter.py  update_citation.py  update_defaults.py  update_niivue.sh  update_vendored_js.py  utils.py
nilearn/: FixB028.py  __init__.py  _base.py  _constants.py  _version.py  conftest.py  datasets.py  datasetsc  exceptions.py  fix_b028.py  group_sparse_covariance.py  honorio_samaras.py  image.py  masking.py  masking.py.bak  masking.py.orig  nilearn_typing.py  parcellations.py  region.py  resampling.py  signal.py  surf_masking.py  surface.py  testing.py  typing.py  version.py
nisl/: __init__.py  base_model.py  datasets.py  decoding.py  decoding_example.py  honorio_samaras.py  image.py  images.py  mask.py  masking.py  mri_transformer.py  preprocessing.py  region.py  resampling.py  roi.py  searchlight.py  setup.py  signal.py  signals.py  starplus.py  starplus_decoding_example.py  starplus_supervised_clustering.py  testing.py  utils.py
nistats/: .gitignore  .travis.yml  CONTRIBUTING.rst  __init__.py  conftest.py  contrasts.py  datasets.py  design_matrix.py  experimental_paradigm.py  first_level_model.py  fmri.py  glm.py  hemodynamic_models.py  model.py  regression.py  reporting.py  requirements-dev.txt  second_level_model.py  thresholding.py  utils.py  version.py
pymvpa-exampledata/: decoding_example.py  supervised_clustering.py
results/: localizer_events.tsv
searchlight/: example_searchlight.py  searchlight.py
tests/: .gitignore  test_exceptions.py  test_supervised_clustering.py
tools/: circleci_build_type.sh  circleci_dependencies.sh  circleci_dependencies_apt.sh  github_actions_dependencies.sh  github_actions_test.sh
(+2555 files in other folders)
