[aliases]

[bdist_rpm]
doc-files = doc

[options]
python_requires = >=3.6
install_requires =
	joblib>=0.12
	lxml
	nibabel>=3.0.0
	numpy>=1.16
	pandas>=0.24
	requests>=2
	scikit-learn>=0.22
	scipy>=1.2

[options.extras_require]
# Necessary reqs to use nilearn's plotting module
plotting =
	matplotlib>=2.0

# For surface plotting mostly
plotly =
	kaleido
	plotly

# Requirements necessary for building the documentation
doc =
	cython
	coverage
	flake8
	kaleido
 	memory_profiler
	mkl
	numpydoc
	pillow
	plotly
	sphinx
	sphinx-copybutton
	sphinx-gallery
	sphinxcontrib-bibtex
	sphinxext-opengraph

# For testing of oldest usable versions of dependencies.
min =
	joblib==0.12
	nibabel==3.0.0
	numpy==1.16
	pandas==0.24.0
	scikit-learn==0.22
	scipy==1.2.0

# For running unit and docstring tests
test =
	codecov
	coverage
	cython
	pytest>=3.9
	pytest-cov

# A combination of dependencies useful for developers
dev =
	%(plotting)s
	%(plotly)s
	%(doc)s
	%(test)s

[flake8]
# For PEP8 error codes see
# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
# E402: module level import not at top of file
# W503: line break before binary operator
# W504: line break after binary operator
ignore=E402, W503, W504. W605

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
junit_family = xunit2
addopts =
	--doctest-modules
	-s
	-vv
	--durations=0

[codespell]
skip = ./.git,plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv
ignore-words = .github/codespell_ignore_words.txt
