[aliases]

[bdist_rpm]
doc-files = doc

[options]
python_requires = >=3.7
install_requires =
	joblib>=1.0.0
	lxml
	nibabel>=3.2.0
	numpy>=1.19.0
	pandas>=1.1.5
	requests>=2.25.0
	scikit-learn>=1.0.0
	scipy>=1.6.0

[options.extras_require]
# Necessary reqs to use nilearn's plotting module
plotting =
	matplotlib>=3.3.0

# For surface plotting mostly
plotly =
	kaleido
	plotly

# Requirements necessary for building the documentation
doc =
	%(plotly)s
	coverage
	flake8
	furo
 	memory_profiler  # measuring memory during docs building
	mkl
	myst-parser
	numpydoc
	sphinx
	sphinx-copybutton
	sphinx-design
	sphinx-gallery
	sphinxcontrib-bibtex
	sphinxext-opengraph

# For testing of oldest usable versions of dependencies.
min =
	joblib==1.0.0
	nibabel==3.2.0
	numpy==1.19.0
	pandas==1.1.5
	scikit-learn==1.0.0
	scipy==1.6.0

# For running unit and docstring tests
test =
	codecov
	coverage
	pytest>=6.0.0
	pytest-cov

# A combination of dependencies useful for developers
dev =
	%(plotting)s
	%(plotly)s
	%(doc)s
	%(test)s

[flake8]
# For PEP8 error codes see
# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
# E402: module level import not at top of file
# W503: line break before binary operator
# W504: line break after binary operator
ignore=E402, W503, W504, W605

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
junit_family = xunit2
addopts =
	--doctest-modules
	-s
	-vv
	--durations=0

[codespell]
skip = ./.git,plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv
ignore-words = .github/codespell_ignore_words.txt
