[aliases]

[bdist_rpm]
doc-files = doc

[options]
python_requires = >=3.7
install_requires =
	joblib>=1.0.0
	lxml
	nibabel>=3.2.0
	numpy>=1.19.0
	pandas>=1.1.5
	requests>=2.25.0
	scikit-learn>=1.0.0
	scipy>=1.6.0
        packaging

[options.extras_require]
# Necessary reqs to use nilearn's plotting module
plotting =
	matplotlib>=3.3.0

# For surface plotting mostly
plotly =
	kaleido
	plotly

# Requirements necessary for building the documentation
doc =
	%(plotly)s
	coverage
	flake8
	flake8-docstrings
	black
	furo
	memory_profiler  # measuring memory during docs building
	mkl
	myst-parser
	numpydoc
	sphinx
	sphinx-copybutton
	sphinx-design
	sphinx-gallery
	sphinxcontrib-bibtex
	sphinxext-opengraph

# For testing of oldest usable versions of dependencies.
min =
	joblib==1.0.0
	nibabel==3.2.0
	numpy==1.19.0
	pandas==1.1.5
	scikit-learn==1.0.0
	scipy==1.6.0

# For running unit and docstring tests
test =
	codecov
	coverage
	pytest>=6.0.0
	pytest-cov

# A combination of dependencies useful for developers
dev =
	%(plotting)s
	%(plotly)s
	%(doc)s
	%(test)s

[flake8]
exclude =
    .git,
    __pycache__,
	env,
	venv,
    build,
    dist,
	nilearn/externals/tempita
--select = D,E,F,W,C90
docstring-convention = numpy
max-line-length = 79
max_complexity = 43
max_function_length = 150
# For PEP8 error codes see
# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
	# D100, D103, D104: missing docstring
	# D105: missing docstring in magic method
	# D107: missing docstring in __init__
	# D205: 1 blank line required between summary line and description
	# D400: first line should end with a period
	# E203: whitespace before ':'
	# E402: module level import not at top of file
	# F401: module imported but unused
	# W503: line break before binary operator
	# W504: line break after binary operator
per-file-ignores =
	setup.py: D100
    # - docstrings rules that should not be applied to tests
	*/tests/*: D100, D103, D104, D205, D400, D401
	*/*/tests/*: D100, D103, D104, D205, D400, D401
    # - docstrings rules that should not be applied to examples
	examples/*/*: D103, D205, D301, D400
    # - docstrings rules that should not be applied to doc
	doc/*: D100, D103, F401
ignore = D105, D107, E402, W503, W504, W605
# for compatibility with black
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
extend-ignore = E203

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
junit_family = xunit2
addopts =
	--doctest-modules
	-s
	-vv
	--durations=0

[codespell]
skip = ./.git,plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv,.mypy_cache,env,venv
ignore-words = .github/codespell_ignore_words.txt
